applications/bambuddy/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bambuddy.vinnysabatini.me
  name: bambuddy
spec:
  hostnames:
  - bambuddy.vinnysabatini.me
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: bambuddy
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
